# roam

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: amadeusWrapper.js  amadeus_wrapper.py
backend_tests/: testAmadeusWrapper.js
backend_tests/results/: test1_results.json  test4_results.json
prompts/: intent_classification.txt  response_generation.txt  state_update.txt
src/: ai_utils.py  booking_utils.py  hello.m4a  prompts.json  streamlit_app.py  test_chat.py
src/templates/: flight_cards.py  styles.py
tests/: test_amadeus_wrapper.py  test_flight_display.py  test_flight_inspiration.py
tests/results/: inspiration_test1.json  inspiration_test2.json
