[project]
name = "roam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.59.6",
    "pytest-asyncio>=0.25.1",
    "pytest>=8.3.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
